[tool.poetry]
name = "nebula-worker"
version = "6.0.3"
description = ""
authors = ["Nebula Broadcast <info@nebulabroadcast.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
conti = "^1.0"
mistune = "^2.0.4"
nxtools = "^1.6"
promexp = "^1.0.2"
psutil = "^5.9.0"
psycopg2-binary = "^2.9.3"
pydantic = "^1.10.4"
redis = "^4.5.4"
requests = "^2.31.0"
python-dotenv = "^0.21.0"
Jinja2 = "^3.1.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.941"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
